--- a/MY3 Bohemia/index.css
+++ b/MY3 Bohemia/index.css
@@ -149,8 +149,7 @@ h1 {
   );
   backdrop-filter: blur(22px);
   border-radius: 61px;
-  padding-top: 10px;
-
+  padding: 10px 15px;
   margin-top: 93px;
   margin-left: 76px;
 }
