--- a/Bokumbo/index.css
+++ b/Bokumbo/index.css
@@ -1,5 +1,16 @@
+html{
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+
 body {
   margin: 0;
+  height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .container {
@@ -32,6 +43,7 @@ h1 {
 }
 
 .main {
+  height: 100%;
   background: linear-gradient(145.31deg, #019966 63.67%, #1e4c6e 97.85%);
   align-items: center;
 }
