--- a/IKP Plus/index.css
+++ b/IKP Plus/index.css
@@ -1,5 +1,17 @@
+html{
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
+  height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-evenly; */
+
 }
 
 .container {
@@ -30,6 +42,8 @@ h1 {
 }
 
 .main {
+  height: 100%;
+
   /* background-color: #gray; */
   background: #333333;
   align-items: center;
@@ -55,10 +69,13 @@ h1 {
 }
 
 .specialization-description {
-  padding-top: 40px;
-  width: 434px;
+  padding-top: 20px;
+  width: 720px;
   padding-left: 5%;
-  height: 123px;
+  height: fit-content;
+  line-height: 35px;
+  padding-bottom: 20px;
+
   background: linear-gradient(
     111.68deg,
     rgba(255, 255, 255, 0.29) 7.59%,
