--- a/SAGOS Service/index.css
+++ b/SAGOS Service/index.css
@@ -1,6 +1,17 @@
+html{
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
-}
+  height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+  }
 
 .container {
   max-width: 1272px;
@@ -30,6 +41,7 @@ h1 {
 }
 
 .main {
+  height: 100%;
   background: radial-gradient(100% 100% at 50% 0%, #ea5757 0%, #252525 100%);
   align-items: center;
 }
@@ -53,10 +65,11 @@ h1 {
 }
 
 .specialization-description {
+  line-height: 32px;
   padding-top: 50px;
-  height: 123px;
+  height: fit-content;
+  padding-bottom: 20px;
 }
-
 .divider {
   margin-top: 10%;
   width: 95%;
